applications/clusters/workload-prod/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: workload-prod
  namespace: traefik

spec:
  type: ExternalName
  externalName: gitops-prod-control-plane

  ports:
    - name: http
      port: 80

    - name: https
      port: 443
